--- a/templates/dostupniproizvodi.html
+++ b/templates/dostupniproizvodi.html
@@ -26,8 +26,8 @@
                 <th>Naziv</th>
                 <th>Kategorija</th>
                 <th>Cena</th>
-                <th>Slika</th>
-                <th>Akcije</th>
+                <th class="no-export">Slika</th>
+                <th class="no-export">Akcije</th>
               </tr>
             </thead>
             <tbody id="skladisteproizvod-telo">
@@ -37,7 +37,7 @@
                 <td class="align-middle">{{proizvod.naziv}}</td>
                 <td class="align-middle">{{proizvod.kategorija}}</td>
                 <td class="align-middle">{{proizvod.cena}}</td>
-                <td class="align-middle">
+                <td class="align-middle no-export">
                   <img 
                     {% if proizvod.slika %}
                       src="/static/uploads/{{ proizvod.slika }}"
@@ -50,7 +50,7 @@
                     class="img-fluid"
                   />
                 </td>
-                <td class="align-middle text-center d-flex justify-content-center">
+                <td class="align-middle text-center d-flex justify-content-center no-export">
                   <a class="icon-btn orange mb-2 ml-2" href={{ url_for('editproizvod', id=proizvod.id, sid=sid) }} role="button">
                     <i class="fas fa-edit"></i>
                   </a>
@@ -330,7 +330,31 @@
         "renameTitle": "Preimenuj stanje"
     }
 },
-      buttons: [ 'copy', 'csv', 'excel', 'pdf' ],
+buttons: [
+      {
+        extend: 'copy',
+        exportOptions: {
+          columns: ':not(.no-export)'
+        }
+      },
+      {
+        extend: 'csv',
+        exportOptions: {
+          columns: ':not(.no-export)'
+        }
+      },
+      {
+        extend: 'excel',
+        exportOptions: {
+          columns: ':not(.no-export)'
+        }
+      },
+      {
+        extend: 'pdf',
+        exportOptions: {
+          columns: ':not(.no-export)'
+        }
+      }],
       columnDefs: [
         { "orderable": false, "targets": [4, 5] }
       ],
