--- a/templates/isporuciproizvod.html
+++ b/templates/isporuciproizvod.html
@@ -49,5 +49,13 @@
   </div>
   
 </div>
+<script>
+  $(document).ready(function() {
+    $('#izaberi-proizvod').select2({
+      placeholder: 'Izaberi proizvod',
+      allowClear: true
+    });
+  });
+</script>
 
   {% endblock %}
