--- a/templates/poruciproizvod.html
+++ b/templates/poruciproizvod.html
@@ -13,32 +13,31 @@
 
   <form action={{ url_for('poruciproizvod', sid=sid, id=id) }} method="POST">
 
-  <div class="form-group">
-    <label for="izaberi-proizvod">Izaberi proizvod</label>
-    <select
-    id="izaberi-proizvod"
-    class="form-control"
-    name="proizvod"
-    required
-  >
-    {% for proizvod in proizvod %}
-      <option value="{{ proizvod.id }}" {% if proizvod.id == id|int %} selected {% endif %}>{{ proizvod.naziv }}</option>
-    {% endfor %}
-  </select>
-  </div>
-
+    <div class="form-group">
+      <label for="izaberi-proizvod">Izaberi proizvod</label>
+      <select
+        id="izaberi-proizvod"
+        class="form-control"
+        name="proizvod"
+        required
+      >
+        {% for proizvod in proizvod %}
+          <option value="{{ proizvod.id }}" {% if proizvod.id == id|int %} selected {% endif %}>{{ proizvod.naziv }}</option>
+        {% endfor %}
+      </select>
+    </div>
   
-  <div class="form-group">
-    <label for="kolicina-proizvod">Količina</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="kolicina-proizvod"
-                  name="kolicina"
-                  placeholder=""
-                  required
-                />
-  </div>
+    <div class="form-group">
+      <label for="kolicina-proizvod">Količina</label>
+      <input
+        type="number"
+        class="form-control"
+        id="kolicina-proizvod"
+        name="kolicina"
+        placeholder=""
+        required
+      />
+    </div>
   
   <button type="submit" class="btn btn-primary" href='#' role="button">Poruči</button>
 </form>
@@ -47,5 +46,13 @@
   </div>
   
 </div>
+<script>
+  $(document).ready(function() {
+    $('#izaberi-proizvod').select2({
+      placeholder: 'Izaberi proizvod',
+      allowClear: true
+    });
+  });
+</script>
 
   {% endblock %}
